# twingate-mdm-connector

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: adding-a-provider.md  configuration.md  notifications.md
docs/providers/: automox.md  datto.md  fleetdm.md  jumpcloud.md  manageengine.md  mosyle.md  ninjaone.md  rippling.md  sophos.md
docs/testing/: credentials.md  docker-run.md  local-run.md  overview.md  twingate-setup.md  validation-checklist.md  windows-vm-setup.md
scripts/: dump-serial.ps1  test-jumpcloud-client.py  test-smtp-notifications.py  test-trust-mutation.py  test-twingate-client.py  test-webhook-notifications.py  validate-trust.py
src/: config.py  engine.py  healthz.py  main.py  matching.py  scheduler.py
src/notifications/: __init__.py  base.py  digest.py  factory.py  smtp.py  webhook.py
src/notifications/templates/: alert_mutation_error.txt  alert_provider_error.txt  alert_startup_failure.txt  digest.txt
src/notifications/webhook_templates/: discord_device_trusted.json  discord_provider_error.json  (+13 more)
src/providers/: automox.py  base.py  datto.py  fleetdm.py  jumpcloud.py  manageengine.py  mosyle.py  ninjaone.py  rippling.py  sophos.py
src/twingate/: client.py  models.py
src/utils/: http.py  logging.py
tests/: conftest.py  test_dry_run.py  test_engine.py  test_matching.py  test_notifications_config.py  test_twingate_client.py
tests/notifications/: test_base.py  test_digest.py  test_smtp.py  test_webhook.py
tests/providers/: test_automox.py  test_datto.py  test_fleetdm.py  test_jumpcloud.py  test_manageengine.py  test_mosyle.py  test_ninjaone.py  test_rippling.py  test_sophos.py
